--- a/views/chatPage.ejs
+++ b/views/chatPage.ejs
@@ -22,13 +22,14 @@
       .chat-container {
         width: 90%;
         max-width: 600px; 
-        height: 90%;
+        height: 95%;
         border-radius: 10px;
         overflow: hidden;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 10px 90px rgba(0, 0, 0, 0.1);
         background-color: #ffffff;
         display: flex;
         flex-direction: column;
+        background: url('https://res.cloudinary.com/dzjvyptwz/image/upload/v1720611782/jc7lb8pdf6rhuzmewlkj.jpg') center/cover no-repeat;
       }
 
       .chat-heading {
@@ -48,7 +49,7 @@
         flex: 1;
         overflow-y: auto;
         padding: 20px;
-        background-color: #f9f9f9;
+        background-color: rgba(249, 249, 249, 0.8); /* Slightly transparent background */
         position: relative;
       }
 
@@ -69,7 +70,7 @@
       }
 
       .bot-message {
-        background-color: #e0e0e0;
+        background-color: #d0d2ff;
         color: #333333;
         align-self: flex-start;
         margin-right: auto;
