--- a/views/chatPage.ejs
+++ b/views/chatPage.ejs
@@ -8,7 +8,7 @@
     <title>Hawks ChatBot</title>
     <style>
       body {
-        background-color: #f5f5f5;
+        background-color: #dcedff;
         color: #333;
         font-family: 'Quicksand', sans-serif;
         margin: 0;
